fix overflow-wrap error of usernam and description label

--- a/web/css/UserAdd.css
+++ b/web/css/UserAdd.css
@@ -146,3 +146,7 @@ span.error {
 #des {
   margin-top: 30px;
 }
+
+.add-confirm, #des{
+  overflow-wrap: break-word;
+}
